# tinkoff_transaction_parser

./: README.md  main.py  pyproject.toml
