[tool.poetry]
name = "tinkoff_transaction_parser"
version = "0.1.0"
description = ""
authors = ["Skril"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
